compiler/test/compilable/test23870.i
// https://issues.dlang.org/show_bug.cgi?id=23870

void test() { \
}
